welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: missing arguments for method + in class any2stringadd;
follow this method with `_' if you want to treat it as a partially applied function
  (!negative & ((a<0 & b>0) | (a>0 & b<0))) | (a<0 & b<0) }+ 
                                                           ^